ch7/src/snapshots/ch7__tests__call_arg_reg.snap
---
source: ch7/src/lib.rs
expression: prog
---
extern rt_initialize
section .text

    global _start
    align 8
_start:
    push rbp
    mov rbp, rsp
    push rbx
    push r12
    push r13
    push r14
    mov rdi, 65536
    mov rsi, 64
    call rt_initialize
    mov r15, rax
    mov rbx, 1
    mov r12, rbx
    add r12, 1
    mov r14, r12
    add r14, 2
    add rbx, 3
    mov r13, rbx
    add r13, 4
    mov rdi, r12
    mov rsi, r14
    mov rdx, rbx
    mov rcx, r13
    call foo
    mov rdi, rbx
    mov rsi, r12
    mov rdx, r14
    mov rcx, r13
    pop r14
    pop r13
    pop r12
    pop rbx
    pop rbp
    jmp foo

    align 8
foo:
    push rbp
    mov rbp, rsp
    pop rbp
    ret

