ch7/src/snapshots/ch7__tests__recursion.snap
---
source: ch7/src/lib.rs
expression: prog
---
extern rt_initialize
section .text

    global _start
    align 8
_start:
    push rbp
    mov rbp, rsp
    mov rdi, 65536
    mov rsi, 64
    call rt_initialize
    mov r15, rax
    mov rdi, 7
    call fact1
    mov rdi, 7
    mov rsi, 1
    call fact2
    pop rbp
    mov rax, 60
    mov rdi, 0
    syscall

    align 8
fact1:
    push rbp
    mov rbp, rsp
    sub rsp, 8
    push rbx
    mov rbx, rdi
    cmp rbx, 0
    je .block0
    mov rcx, rbx
    sub rcx, 1
    mov rdi, rcx
    call fact1
    mov rcx, rax
    mov rax, rbx
    xor rdx, rdx
    imul rcx

.epilogue:
    pop rbx
    mov rsp, rbp
    pop rbp
    ret

.block0:
    mov rax, 1
    jmp .epilogue

    align 8
fact2:
    push rbp
    mov rbp, rsp
    mov rcx, rdi
    cmp rcx, 0
    je .block2
    mov rdi, rcx
    sub rdi, 1
    mov rax, rsi
    xor rdx, rdx
    imul rcx
    mov rcx, rax
    mov rsi, rcx
    pop rbp
    jmp fact2

.block2:
    mov rax, rsi
    pop rbp
    ret

